# ztf-gaia-crossmatch

./: .gitignore  README.md  cat_c_survey.html  index.html  pyproject.toml  requirements.txt
sources/: 108930682843080576.html  110414473785915264.html  110454021843700480.html  110554558441189760.html  110639667511091200.html  110675539077980928.html  110861425264201472.html  110864414561439104.html  110889668969132288.html  110909219660374400.html  124646483576526080.html  124652977565916032.html  124655142230586496.html  124834190826555008.html  124834190826557568.html  124843502315591936.html  124874151202095360.html  124876762543773312.html  124892396223079936.html  124903219542239744.html  124939915742894208.html  124950532900252928.html  124951735491061888.html  124954003235559552.html  1266332453250176.html  1315673037475840.html  1316154073788288.html  1321445473501312.html  1344638296876800.html  1349105062860288.html  1357626277949184.html  1358176033795456.html  1359447344084736.html  15529403447198592.html  15542666306169728.html  15548610540905472.html  15610939105644416.html  15623583490128000.html  15628874889834240.html  15640110524241280.html  (+2049 more)
src/: __main__.py  config.py  crossmatch.py  forced_phot.py  lightcurves.py  multisurvey.py  pipeline.py  scoring.py  tap_queries.py  website.py
static/: main.js  style.css
templates/: base.html  cat_c_survey.html  index.html  source.html
