[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ztf-gaia-crossmatch"
version = "0.1.0"
description = "Cross-match ZTF DR23 and Gaia DR3 to find uncharacterized variables"
requires-python = ">=3.9"
dependencies = [
    "astroquery",
    "astropy",
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "healpy",
    "tqdm",
    "jinja2",
    "pyarrow",
]

[project.scripts]
ztf-gaia = "src.pipeline:main"
